go_core/libminxg_go.h

extern char* MinxgGoVersion(void);
extern int MinxgHealthCheck(void);
extern long long MinxgTextSearchBMH(char* haystack, size_t hlen, char* needle, size_t nlen);
extern long long MinxgTextSearchBMHReverse(char* haystack, size_t hlen, char* needle, size_t nlen);
extern int MinxgTextCount(char* haystack, size_t hlen, char* needle, size_t nlen);
extern size_t MinxgStrLower(char* str, size_t len);
extern size_t MinxgStrUpper(char* str, size_t len);
extern size_t MinxgStrTrim(char* str, size_t len);
extern int MinxgGlobMatch(char* pattern, char* str);
extern int MinxgGlobMatchCI(char* pattern, char* str);
extern int MinxgUtf8Valid(char* str, size_t len);
extern int MinxgUtf8Codepoints(char* str, size_t len);
extern size_t MinxgSlugify(char* input, size_t inLen, char* outBuf, size_t outCap);
extern size_t MinxgTruncate(char* input, size_t inLen, size_t maxLen, char* suffix, size_t sufLen, char* outBuf, size_t outCap);
extern size_t MinxgWordFreqHash(char* input, size_t inLen, int topN, char* outBuf, size_t outCap);
extern size_t MinxgNormalizeWS(char* input, size_t inLen, int lineEnding, char* outBuf, size_t outCap);
extern int MinxgBaseConvert(char* number, int baseFr, int baseTo, char* outBuf, size_t outCap);
extern int MinxgExtractURLs(char* input, size_t inLen, char* outBuf, size_t outCap, int maxUrls);
extern int MinxgExtractEmails(char* input, size_t inLen, char* outBuf, size_t outCap, int maxEmails);
extern int MinxgExtractHashtags(char* input, size_t inLen, char* outBuf, size_t outCap, int maxTags);
extern void MinxgFree(void* ptr);