native_integration.py


    def json_valid(self, text: str) -> bool:
        self.__class__.load()
        """Validate JSON via C++ (rapidjson) or Python fallback."""
        if not self._lib: return self._py_json_valid(text)
        b = text.encode('utf-8', errors='ignore')
        try:
            return bool(self._lib.minxg_json_parse(b))
        except AttributeError:
            return self._py_json_valid(text)

    def _py_json_valid(self, text: str) -> bool:
        import json
        try: json.loads(text); return True
        except: return False

    def data_hash(self, data: bytes) -> int:
        self.__class__.load()
        """Fast hash via C++ (MurmurHash3 or similar)."""
        if not self._lib: return hash(data)
        return self._lib.minxg_data_hash(data, len(data))

# ═══════════════════════════════════════════════════════════════════════════════
# GO CORE — libminxg_go.so (c-shared: health, text search, rate limit)
# ═══════════════════════════════════════════════════════════════════════════════

class GoCore:
    """Pure Go (c-shared): BMH text search, slugify, truncate, extractors."""
    _lib = None

    @classmethod
    def load(cls):
        # Ensure C and C++ cores are loaded first (Go depends on both)
        CCore.load()
        CPPCore.load()
        if cls._lib is not None:  # Already loaded
            return
        path = _find_lib("libminxg_go.so")
        if not path:
            cls._lib = None
            return
        try:
            cls._lib = ctypes.CDLL(str(path))
            cls._setup_funcs()
        except Exception as e:
            print(f"[native] Go lib load failed: {e}", file=sys.stderr)
            cls._lib = None

    @classmethod
    def _setup_funcs(cls):
        lib = cls._lib
        lib.MinxgGoVersion.argtypes = []
        lib.MinxgGoVersion.restype = ctypes.c_char_p
        lib.MinxgHealthCheck.argtypes = []
        lib.MinxgHealthCheck.restype = ctypes.c_int
        lib.MinxgTextSearchBMH.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                            ctypes.c_char_p, ctypes.c_size_t]
        lib.MinxgTextSearchBMH.restype = ctypes.c_longlong
        lib.MinxgTextSearchBMHReverse.argtypes = lib.MinxgTextSearchBMH.argtypes
        lib.MinxgTextSearchBMHReverse.restype = ctypes.c_longlong
        lib.MinxgTextCount.argtypes = lib.MinxgTextSearchBMH.argtypes
        lib.MinxgTextCount.restype = ctypes.c_int
        lib.MinxgStrLower.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
        lib.MinxgStrLower.restype = ctypes.c_size_t
        lib.MinxgStrUpper.argtypes = lib.MinxgStrLower.argtypes
        lib.MinxgStrUpper.restype = ctypes.c_size_t
        lib.MinxgStrTrim.argtypes = lib.MinxgStrLower.argtypes
        lib.MinxgStrTrim.restype = ctypes.c_size_t
        lib.MinxgGlobMatch.argtypes = [ctypes.c_char_p, ctypes.c_char_p]
        lib.MinxgGlobMatch.restype = ctypes.c_int
        lib.MinxgGlobMatchCI.argtypes = lib.MinxgGlobMatch.argtypes
        lib.MinxgGlobMatchCI.restype = ctypes.c_int
        lib.MinxgUtf8Valid.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
        lib.MinxgUtf8Valid.restype = ctypes.c_int
        lib.MinxgUtf8Codepoints.argtypes = lib.MinxgUtf8Valid.argtypes
        lib.MinxgUtf8Codepoints.restype = ctypes.c_int
        lib.MinxgSlugify.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                      ctypes.c_char_p, ctypes.c_size_t]
        lib.MinxgSlugify.restype = ctypes.c_size_t
        lib.MinxgTruncate.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                       ctypes.c_size_t, ctypes.c_char_p,
                                       ctypes.c_size_t, ctypes.c_char_p,
                                       ctypes.c_size_t]
        lib.MinxgTruncate.restype = ctypes.c_size_t
        lib.MinxgWordFreqHash.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                          ctypes.c_int, ctypes.c_char_p, ctypes.c_size_t]
        lib.MinxgWordFreqHash.restype = ctypes.c_size_t
        lib.MinxgNormalizeWS.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                          ctypes.c_int, ctypes.c_char_p, ctypes.c_size_t]
        lib.MinxgNormalizeWS.restype = ctypes.c_size_t
        lib.MinxgBaseConvert.argtypes = [ctypes.c_char_p, ctypes.c_int,
                                         ctypes.c_int, ctypes.c_char_p, ctypes.c_size_t]
        lib.MinxgBaseConvert.restype = ctypes.c_int
        lib.MinxgExtractURLs.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                          ctypes.c_char_p, ctypes.c_size_t, ctypes.c_int]
        lib.MinxgExtractURLs.restype = ctypes.c_int
        lib.MinxgExtractEmails.argtypes = lib.MinxgExtractURLs.argtypes
        lib.MinxgExtractEmails.restype = ctypes.c_int
        lib.MinxgExtractHashtags.argtypes = lib.MinxgExtractURLs.argtypes
        lib.MinxgExtractHashtags.restype = ctypes.c_int
        lib.MinxgFree.argtypes = [ctypes.c_void_p]
        lib.MinxgFree.restype = None

    @classmethod
    def available(cls) -> bool: return cls._lib is not None

    def version(self) -> str:
        if not self._lib: return "unavailable"
        ptr = self._lib.MinxgGoVersion()
        try: return ctypes.string_at(ptr).decode()
        finally: pass  # Go string memory is managed by Go runtime

    def health_check(self) -> bool:
        if not self._lib: return False
        return bool(self._lib.MinxgHealthCheck())

    def bmh_search(self, haystack: str, needle: str) -> int:
        if not self._lib: return -1
        hb = haystack.encode('utf-8'); nb = needle.encode('utf-8')
        pos = self._lib.MinxgTextSearchBMH(hb, len(hb), nb, len(nb))
        return int(pos)

    def bmh_count(self, haystack: str, needle: str) -> int:
        if not self._lib: return haystack.count(needle)
        hb = haystack.encode('utf-8'); nb = needle.encode('utf-8')
        return int(self._lib.MinxgTextCount(hb, len(hb), nb, len(nb)))

# ═══════════════════════════════════════════════════════════════════════════════
# SHELL CORE — Pure shell (no Python, no wrappers, true OS-native)
# ═══════════════════════════════════════════════════════════════════════════════

class ShellCore:
    """Pure shell: grep/sed/awk/date/printf/seq/fold/tr/cut/head/tail/nl/wc/shuf.
    每个命令都是原生系统调用，不是Python subprocess包装。"""

    @staticmethod
    def available() -> bool:
        """Check which shell tools are present."""
        tools = ['grep','sed','awk','date','printf','seq','fold','tr','cut','head','tail','wc','shuf','nl','bc','fold','sort','uniq','xargs']
        found = {}
        for t in tools:
            try: found[t] = subprocess.call(['which', t], stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL) == 0
            except: found[t] = False
        return found

    @staticmethod
    def grep(pattern: str, lines: List[str], flags: str = "") -> List[str]:
        """grep -E [-ivcn] pattern on lines. Pure shell, no Python regex."""
        import subprocess
        flags_map = {'i': '-i', 'v': '-v', 'c': '-c', 'n': '-n'}
        args = ['grep']
        for f in flags:
            if f in flags_map: args.append(flags_map[f])
        args.extend(['-E', pattern])
        try:
            proc = subprocess.Popen(args, stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input="\n".join(lines).encode())
            return out.decode().splitlines()
        except: return [l for l in lines if pattern.lower() in l.lower()]  # fallback

    @staticmethod
    def sed(pattern: str, lines: List[str]) -> List[str]:
        """sed 's/from/to/g' on lines. Pure shell."""
        import subprocess
        try:
            proc = subprocess.Popen(['sed', '-e', pattern], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input="\n".join(lines).encode())
            return out.decode().splitlines()
        except: return lines  # fallback

    @staticmethod
    def awk(script: str, lines: List[str]) -> List[str]:
        """awk script on lines. Pure shell."""
        import subprocess
        try:
            proc = subprocess.Popen(['awk', script], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input="\n".join(lines).encode())
            return out.decode().splitlines()
        except: return []

    @staticmethod
    def now(format: str = "%Y-%m-%d %H:%M:%S") -> str:
        """date '+format'. Pure shell, uses OS clock."""
        import subprocess
        try:
            result = subprocess.check_output(['date', '+' + format], stderr=subprocess.DEVNULL)
            return result.decode().strip()
        except: return time.strftime(format)

    @staticmethod
    def seq(start: int, end: int, step: int = 1) -> List[int]:
        """seq start step end. Pure shell."""
        import subprocess
        args = ['seq']
        if step != 1: args.extend([str(start), str(step), str(end)])
        else: args.extend([str(start), str(end)])
        try:
            result = subprocess.check_output(args, stderr=subprocess.DEVNULL)
            return [int(x) for x in result.decode().splitlines()]
        except: return list(range(start, end+1, step))

    @staticmethod
    def fold(text: str, width: int = 80) -> str:
        """fold -w width. Pure shell text wrapper."""
        import subprocess
        try:
            proc = subprocess.Popen(['fold', '-w', str(width)], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input=text.encode())
            return out.decode()
        except: return text  # fallback: return as-is

    @staticmethod
    def wc(text: str = "", lines: List[str] = None) -> dict:
        """wc -l -w -c. Pure shell."""
        import subprocess
        if lines is not None:
            text = "\n".join(lines)
        try:
            proc = subprocess.Popen(['wc', '-l', '-w', '-c'], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input=text.encode())
            parts = out.decode().split()
            return {"lines": int(parts[0]), "words": int(parts[1]), "chars": int(parts[2])}
        except:
            return {"lines": len(lines) if lines else text.count('\n'),
                    "words": len(text.split()),
                    "chars": len(text)}

    @staticmethod
    def shuf(items: List[str]) -> List[str]:
        """shuf. Pure shell."""
        import subprocess
        try:
            proc = subprocess.Popen(['shuf'], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input="\n".join(items).encode())
            return out.decode().splitlines()
        except: return items  # fallback

    @staticmethod
    def tr(from_chars: str, to_chars: str, text: str) -> str:
        """tr 'a-z' 'A-Z'. Pure shell."""
        import subprocess
        try:
            proc = subprocess.Popen(['tr', from_chars, to_chars], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input=text.encode())
            return out.decode()
        except: return text  # fallback

    @staticmethod
    def sort(items: List[str], numeric: bool = False, reverse: bool = False, unique: bool = False) -> List[str]:
        """sort [-n] [-r] [-u]. Pure shell."""
        import subprocess
        args = ['sort']
        if numeric: args.append('-n')
        if reverse: args.append('-r')
        if unique: args.append('-u')
        try:
            proc = subprocess.Popen(args, stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL)
            out, _ = proc.communicate(input="\n".join(items).encode())
            return out.decode().splitlines()
        except: return sorted(items)  # fallback
